tests/ui/tests/lowering/missing-external-module.stderr
error[E016]: could not load module `external-module-really-nowhere-to-be-found`
 --> ${DIRECTORY}/lowering/missing-external-module.lushui:4:1
  |
4 | module external-module-really-nowhere-to-be-found
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/external-module-really-nowhere-to-be-found.lushui`: No such file or directory (os error 2)

error[E016]: could not load module `meaningless`
 --> ${DIRECTORY}/lowering/missing-external-module.lushui:7:1
  |
7 | module meaningless
  | ^^^^^^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/expansion-of-void-until-eternity.lushui`: No such file or directory (os error 2)

error: aborting due to 2 previous errors
 note: the error E016 has a detailed explanation
 help: run `lushui explain E016` to view it

